parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  simple_typ : INT
   3             | BOOL
   4             | REAL
   5             | CHAR
   6             | STRING
   7             | simple_typ SET
   8             | simple_typ ARRAY
   9             | LPAREN typ RPAREN

  10  simple_typ_or_tuple : simple_typ
  11                      | simple_typ TIMES typ_list

  12  typ : simple_typ_or_tuple
  13      | typ ARROW typ

  14  typ_list : simple_typ
  15           | typ_list TIMES simple_typ

  16  expr : ID
  17       | LITERAL
  18       | REALLIT
  19       | BOOLLIT
  20       | CHARLIT
  21       | string_lit
  22       | expr PLUS expr
  23       | expr MINUS expr
  24       | expr TIMES expr
  25       | expr DIVIDE expr
  26       | MINUS expr
  27       | expr EQ expr
  28       | expr NEQ expr
  29       | expr LT expr
  30       | expr LEQ expr
  31       | expr GT expr
  32       | expr GEQ expr
  33       | expr AND expr
  34       | expr OR expr
  35       | ID single_or_tuple
  36       | single_or_tuple
  37       | LBRACE expr_list RBRACE
  38       | LBRACKET expr_list RBRACKET
  39       | LBRACKET expr_list_ne ELLIPSE expr RBRACKET
  40       | LBRACE ID IN expr PIPE expr set_build_ext_cond RBRACE
  41       | LBRACE expr PIPE ID IN expr set_build_ext_cond RBRACE

  42  single_or_tuple : LPAREN expr_list_ne RPAREN

  43  stmt : expr SEMI
  44       | ID EQUAL expr SEMI
  45       | LET ID COLON typ SEMI
  46       | ID LPAREN expr_list_ne RPAREN EQUAL func_stmt_list DSEMI

  47  stmt_list :
  48            | stmt_list stmt

  49  string_lit : STRINGLIT
  50             | BEGINTERSTRING mid_inter_string ENDINTERSTRING

  51  mid_inter_string : expr
  52                   | mid_inter_string MIDINTERSTRING expr

  53  expr_list :
  54            | expr
  55            | expr_list COMMA expr

  56  expr_list_ne : expr
  57               | expr_list COMMA expr

  58  func_stmt_list : stmt_list expr

  59  set_build_ext_cond :
  60                     | COMMA expr_list_ne

  61  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (61)
	stmt_list : .  (47)

	.  reduce 47

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (61)

	.  reduce 61


state 4
	program : stmt_list . EOF  (1)
	stmt_list : stmt_list . stmt  (48)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	LET  shift 8
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 16
	EOF  shift 17
	.  error

	expr  goto 18
	string_lit  goto 19
	single_or_tuple  goto 20
	stmt  goto 21


state 5
	expr : LBRACKET . expr_list RBRACKET  (38)
	expr : LBRACKET . expr_list_ne ELLIPSE expr RBRACKET  (39)
	expr_list : .  (53)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	RBRACKET  reduce 53
	COMMA  reduce 53

	expr  goto 23
	string_lit  goto 19
	single_or_tuple  goto 20
	expr_list  goto 24
	expr_list_ne  goto 25


state 6
	single_or_tuple : LPAREN . expr_list_ne RPAREN  (42)
	expr_list : .  (53)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	COMMA  reduce 53

	expr  goto 23
	string_lit  goto 19
	single_or_tuple  goto 20
	expr_list  goto 26
	expr_list_ne  goto 27


state 7
	expr : LBRACE . expr_list RBRACE  (37)
	expr : LBRACE . ID IN expr PIPE expr set_build_ext_cond RBRACE  (40)
	expr : LBRACE . expr PIPE ID IN expr set_build_ext_cond RBRACE  (41)
	expr_list : .  (53)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 28
	RBRACE  reduce 53
	COMMA  reduce 53

	expr  goto 29
	string_lit  goto 19
	single_or_tuple  goto 20
	expr_list  goto 30


state 8
	stmt : LET . ID COLON typ SEMI  (45)

	ID  shift 31
	.  error


state 9
	expr : MINUS . expr  (26)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 32
	string_lit  goto 19
	single_or_tuple  goto 20


state 10
	expr : LITERAL .  (17)

	.  reduce 17


state 11
	expr : REALLIT .  (18)

	.  reduce 18


state 12
	expr : CHARLIT .  (20)

	.  reduce 20


state 13
	expr : BOOLLIT .  (19)

	.  reduce 19


state 14
	string_lit : STRINGLIT .  (49)

	.  reduce 49


state 15
	string_lit : BEGINTERSTRING . mid_inter_string ENDINTERSTRING  (50)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 33
	string_lit  goto 19
	single_or_tuple  goto 20
	mid_inter_string  goto 34


state 16
	expr : ID .  (16)
	expr : ID . single_or_tuple  (35)
	stmt : ID . EQUAL expr SEMI  (44)
	stmt : ID . LPAREN expr_list_ne RPAREN EQUAL func_stmt_list DSEMI  (46)

	LPAREN  shift 35
	EQUAL  shift 36
	SEMI  reduce 16
	DSEMI  reduce 16
	EQ  reduce 16
	NEQ  reduce 16
	LT  reduce 16
	LEQ  reduce 16
	GT  reduce 16
	GEQ  reduce 16
	AND  reduce 16
	OR  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	TIMES  reduce 16
	DIVIDE  reduce 16

	single_or_tuple  goto 37


state 17
	program : stmt_list EOF .  (1)

	.  reduce 1


state 18
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	stmt : expr . SEMI  (43)

	SEMI  shift 38
	EQ  shift 39
	NEQ  shift 40
	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	AND  shift 45
	OR  shift 46
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	.  error


state 19
	expr : string_lit .  (21)

	.  reduce 21


state 20
	expr : single_or_tuple .  (36)

	.  reduce 36


state 21
	stmt_list : stmt_list stmt .  (48)

	.  reduce 48


state 22
	expr : ID .  (16)
	expr : ID . single_or_tuple  (35)

	LPAREN  shift 6
	RBRACKET  reduce 16
	RPAREN  reduce 16
	RBRACE  reduce 16
	COMMA  reduce 16
	SEMI  reduce 16
	DSEMI  reduce 16
	EQ  reduce 16
	NEQ  reduce 16
	LT  reduce 16
	LEQ  reduce 16
	GT  reduce 16
	GEQ  reduce 16
	AND  reduce 16
	OR  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	TIMES  reduce 16
	DIVIDE  reduce 16
	PIPE  reduce 16
	ELLIPSE  reduce 16
	MIDINTERSTRING  reduce 16
	ENDINTERSTRING  reduce 16

	single_or_tuple  goto 37


state 23
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr_list : expr .  (54)
	expr_list_ne : expr .  (56)

	EQ  shift 39
	NEQ  shift 40
	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	AND  shift 45
	OR  shift 46
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 54
	RPAREN  reduce 56
	RBRACE  reduce 56
	COMMA  reduce 54
	ELLIPSE  reduce 56


state 24
	expr : LBRACKET expr_list . RBRACKET  (38)
	expr_list : expr_list . COMMA expr  (55)
	expr_list_ne : expr_list . COMMA expr  (57)

	RBRACKET  shift 51
	COMMA  shift 52
	.  error


state 25
	expr : LBRACKET expr_list_ne . ELLIPSE expr RBRACKET  (39)

	ELLIPSE  shift 53
	.  error


state 26
	expr_list : expr_list . COMMA expr  (55)
	expr_list_ne : expr_list . COMMA expr  (57)

	COMMA  shift 52
	.  error


state 27
	single_or_tuple : LPAREN expr_list_ne . RPAREN  (42)

	RPAREN  shift 54
	.  error


state 28
	expr : ID .  (16)
	expr : ID . single_or_tuple  (35)
	expr : LBRACE ID . IN expr PIPE expr set_build_ext_cond RBRACE  (40)

	LPAREN  shift 6
	IN  shift 55
	RBRACE  reduce 16
	COMMA  reduce 16
	EQ  reduce 16
	NEQ  reduce 16
	LT  reduce 16
	LEQ  reduce 16
	GT  reduce 16
	GEQ  reduce 16
	AND  reduce 16
	OR  reduce 16
	PLUS  reduce 16
	MINUS  reduce 16
	TIMES  reduce 16
	DIVIDE  reduce 16
	PIPE  reduce 16

	single_or_tuple  goto 37


state 29
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	expr : LBRACE expr . PIPE ID IN expr set_build_ext_cond RBRACE  (41)
	expr_list : expr .  (54)

	EQ  shift 39
	NEQ  shift 40
	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	AND  shift 45
	OR  shift 46
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	PIPE  shift 56
	RBRACE  reduce 54
	COMMA  reduce 54


state 30
	expr : LBRACE expr_list . RBRACE  (37)
	expr_list : expr_list . COMMA expr  (55)

	RBRACE  shift 57
	COMMA  shift 58
	.  error


state 31
	stmt : LET ID . COLON typ SEMI  (45)

	COLON  shift 59
	.  error


state 32
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : MINUS expr .  (26)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	.  reduce 26


state 33
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	mid_inter_string : expr .  (51)

	EQ  shift 39
	NEQ  shift 40
	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	AND  shift 45
	OR  shift 46
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	MIDINTERSTRING  reduce 51
	ENDINTERSTRING  reduce 51


state 34
	string_lit : BEGINTERSTRING mid_inter_string . ENDINTERSTRING  (50)
	mid_inter_string : mid_inter_string . MIDINTERSTRING expr  (52)

	MIDINTERSTRING  shift 60
	ENDINTERSTRING  shift 61
	.  error


state 35
	single_or_tuple : LPAREN . expr_list_ne RPAREN  (42)
	stmt : ID LPAREN . expr_list_ne RPAREN EQUAL func_stmt_list DSEMI  (46)
	expr_list : .  (53)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	COMMA  reduce 53

	expr  goto 23
	string_lit  goto 19
	single_or_tuple  goto 20
	expr_list  goto 26
	expr_list_ne  goto 62


state 36
	stmt : ID EQUAL . expr SEMI  (44)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 63
	string_lit  goto 19
	single_or_tuple  goto 20


state 37
	expr : ID single_or_tuple .  (35)

	.  reduce 35


state 38
	stmt : expr SEMI .  (43)

	.  reduce 43


state 39
	expr : expr EQ . expr  (27)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 64
	string_lit  goto 19
	single_or_tuple  goto 20


state 40
	expr : expr NEQ . expr  (28)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 65
	string_lit  goto 19
	single_or_tuple  goto 20


state 41
	expr : expr LT . expr  (29)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 66
	string_lit  goto 19
	single_or_tuple  goto 20


state 42
	expr : expr LEQ . expr  (30)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 67
	string_lit  goto 19
	single_or_tuple  goto 20


state 43
	expr : expr GT . expr  (31)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 68
	string_lit  goto 19
	single_or_tuple  goto 20


state 44
	expr : expr GEQ . expr  (32)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 69
	string_lit  goto 19
	single_or_tuple  goto 20


state 45
	expr : expr AND . expr  (33)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 70
	string_lit  goto 19
	single_or_tuple  goto 20


state 46
	expr : expr OR . expr  (34)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 71
	string_lit  goto 19
	single_or_tuple  goto 20


state 47
	expr : expr PLUS . expr  (22)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 72
	string_lit  goto 19
	single_or_tuple  goto 20


state 48
	expr : expr MINUS . expr  (23)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 73
	string_lit  goto 19
	single_or_tuple  goto 20


state 49
	expr : expr TIMES . expr  (24)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 74
	string_lit  goto 19
	single_or_tuple  goto 20


state 50
	expr : expr DIVIDE . expr  (25)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 75
	string_lit  goto 19
	single_or_tuple  goto 20


state 51
	expr : LBRACKET expr_list RBRACKET .  (38)

	.  reduce 38


state 52
	expr_list : expr_list COMMA . expr  (55)
	expr_list_ne : expr_list COMMA . expr  (57)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 76
	string_lit  goto 19
	single_or_tuple  goto 20


state 53
	expr : LBRACKET expr_list_ne ELLIPSE . expr RBRACKET  (39)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 77
	string_lit  goto 19
	single_or_tuple  goto 20


state 54
	single_or_tuple : LPAREN expr_list_ne RPAREN .  (42)

	.  reduce 42


state 55
	expr : LBRACE ID IN . expr PIPE expr set_build_ext_cond RBRACE  (40)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 78
	string_lit  goto 19
	single_or_tuple  goto 20


state 56
	expr : LBRACE expr PIPE . ID IN expr set_build_ext_cond RBRACE  (41)

	ID  shift 79
	.  error


state 57
	expr : LBRACE expr_list RBRACE .  (37)

	.  reduce 37


state 58
	expr_list : expr_list COMMA . expr  (55)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 80
	string_lit  goto 19
	single_or_tuple  goto 20


state 59
	stmt : LET ID COLON . typ SEMI  (45)

	LPAREN  shift 81
	INT  shift 82
	BOOL  shift 83
	REAL  shift 84
	CHAR  shift 85
	STRING  shift 86
	.  error

	simple_typ  goto 87
	typ  goto 88
	simple_typ_or_tuple  goto 89


state 60
	mid_inter_string : mid_inter_string MIDINTERSTRING . expr  (52)

	LBRACKET  shift 5
	LPAREN  shift 6
	LBRACE  shift 7
	MINUS  shift 9
	LITERAL  shift 10
	REALLIT  shift 11
	CHARLIT  shift 12
	BOOLLIT  shift 13
	STRINGLIT  shift 14
	BEGINTERSTRING  shift 15
	ID  shift 22
	.  error

	expr  goto 90
	string_lit  goto 19
	single_or_tuple  goto 20


state 61
	string_lit : BEGINTERSTRING mid_inter_string ENDINTERSTRING .  (50)

	.  reduce 50


state 62
	single_or_tuple : LPAREN expr_list_ne . RPAREN  (42)
	stmt : ID LPAREN expr_list_ne . RPAREN EQUAL func_stmt_list DSEMI  (46)

	RPAREN  shift 91
	.  error


state 63
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)
	stmt : ID EQUAL expr . SEMI  (44)

	SEMI  shift 92
	EQ  shift 39
	NEQ  shift 40
	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	AND  shift 45
	OR  shift 46
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	.  error


state 64
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr EQ expr .  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 27
	RPAREN  reduce 27
	RBRACE  reduce 27
	COMMA  reduce 27
	SEMI  reduce 27
	DSEMI  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	AND  reduce 27
	OR  reduce 27
	PIPE  reduce 27
	ELLIPSE  reduce 27
	MIDINTERSTRING  reduce 27
	ENDINTERSTRING  reduce 27


state 65
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr NEQ expr .  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	LT  shift 41
	LEQ  shift 42
	GT  shift 43
	GEQ  shift 44
	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 28
	RPAREN  reduce 28
	RBRACE  reduce 28
	COMMA  reduce 28
	SEMI  reduce 28
	DSEMI  reduce 28
	EQ  reduce 28
	NEQ  reduce 28
	AND  reduce 28
	OR  reduce 28
	PIPE  reduce 28
	ELLIPSE  reduce 28
	MIDINTERSTRING  reduce 28
	ENDINTERSTRING  reduce 28


state 66
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr LT expr .  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 29
	RPAREN  reduce 29
	RBRACE  reduce 29
	COMMA  reduce 29
	SEMI  reduce 29
	DSEMI  reduce 29
	EQ  reduce 29
	NEQ  reduce 29
	LT  reduce 29
	LEQ  reduce 29
	GT  reduce 29
	GEQ  reduce 29
	AND  reduce 29
	OR  reduce 29
	PIPE  reduce 29
	ELLIPSE  reduce 29
	MIDINTERSTRING  reduce 29
	ENDINTERSTRING  reduce 29


state 67
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr LEQ expr .  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 30
	RPAREN  reduce 30
	RBRACE  reduce 30
	COMMA  reduce 30
	SEMI  reduce 30
	DSEMI  reduce 30
	EQ  reduce 30
	NEQ  reduce 30
	LT  reduce 30
	LEQ  reduce 30
	GT  reduce 30
	GEQ  reduce 30
	AND  reduce 30
	OR  reduce 30
	PIPE  reduce 30
	ELLIPSE  reduce 30
	MIDINTERSTRING  reduce 30
	ENDINTERSTRING  reduce 30


state 68
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr GT expr .  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 31
	RPAREN  reduce 31
	RBRACE  reduce 31
	COMMA  reduce 31
	SEMI  reduce 31
	DSEMI  reduce 31
	EQ  reduce 31
	NEQ  reduce 31
	LT  reduce 31
	LEQ  reduce 31
	GT  reduce 31
	GEQ  reduce 31
	AND  reduce 31
	OR  reduce 31
	PIPE  reduce 31
	ELLIPSE  reduce 31
	MIDINTERSTRING  reduce 31
	ENDINTERSTRING  reduce 31


state 69
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr GEQ expr .  (32)
	expr : expr . AND expr  (33)
	expr : expr . OR expr  (34)

	PLUS  shift 47
	MINUS  shift 48
	TIMES  shift 49
	DIVIDE  shift 50
	RBRACKET  reduce 32
	RPAREN  reduce 32
	RBRACE  reduce 32
	COMMA  reduce 32
	SEMI  reduce 32
	DSEMI  reduce 32
	EQ  reduce 32
	NEQ  reduce 32
	LT  reduce 32
	LEQ  reduce 32
	GT  reduce 32
	GEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	PIPE  reduce 32
	ELLIPSE  reduce 32
	MIDINTERSTRING  reduce 32
	ENDINTERSTRING  reduce 32


state 70
	expr : expr . PLUS expr  (22)
	expr : expr . MINUS expr  (23)
	expr : expr . TIMES expr  (24)
	expr : expr . DIVIDE expr  (25)
	expr : expr . EQ expr  (27)
	expr : expr . NEQ expr  (28)
	expr : expr . LT expr  (29)
	expr : expr . LEQ expr  (30)
	expr : expr . GT expr  (31)
	expr : expr . GEQ expr  (32)
	expr : expr . AND expr  (33)
	expr : expr AND expr .  (33)
	expr : expr . OR expr  (34)
